# aces-backend

./: .env.example  .gitignore  docker-compose.yaml  main.py  pyproject.toml  ruff.toml
.github/workflows/: check.yml
api/auth/: main.py
api/projects/: __init__.py  main.py
api/users/: __init__.py  main.py
api/v1/auth/: __init__.py  main.py
api/v1/devlogs/: __init__.py  main.py
api/v1/projects/: __init__.py  main.py
api/v1/users/: __init__.py  main.py
db/: __init__.py  main.py
jobs/: __init__.py  devlog_review.py  devlogreview.py  pyramid_sync.py  pyramidsync.py  runner.py  user_cleanup.py  usercleanup.py
lib/: hackatime.py  ratelimiting.py  responses.py
migrations/: env.py  script.py.mako
migrations/versions/: 2a768f035d17_add_oauth_data_to_users.py  529e7822f1fd_update_username_uniqueness.py  55c51de7e409_add_project_description_field.py  7c7e7bd6fb71_update_ysws_eligible_to_bool.py  96aca6c51a90_initial_migration.py  a96ce0900295_add_referral_code_used.py  bc017ab47b46_update_ysws_eligible_to_bool_again.py  d7462fdbad39_cleanup.py  ff2ce0fad2ca_change_state_to_str.py
models/: __init__.py  base.py  devlog.py  main.py  user.py  user_project.py
static/: login.html  projectstest.html  test-devlog-create.html  test-devlog-sync.html
v1/auth/: main.py  otp.html
v1/lib/: hackatime.py
v1/models/: user.py
v1/projects/: main.py
v1/users/: main.py
