[project]
name = "aces-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.4",
    "fastapi-pagination>=0.12.37",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "pyairtable>=3.3.0",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "validators>=0.35.0",
    "sentry-sdk[fastapi]>=2.35.0",
]
